[gd_scene load_steps=42 format=3 uid="uid://cc6e8hf8dein5"]

[ext_resource type="Resource" uid="uid://d2nm2n73ysnn4" path="res://stats/enemystats/enemystats_cheepcheep.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://b6sxe0ovnsssg" path="res://scenes/battle/HurtParticles.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/battle/enemy_states/enemy_state_persistent.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://cn1cvpdr81sc7" path="res://scenes/overworld/SpriteHolderEnemy.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dlyf6e7x38igq" path="res://sprites/UI/enemy_cursor.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dwnrliqytbx0s" path="res://textures/skyguy/balloon2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://jt1y37lpwc34" path="res://textures/redshyguy/slingshotammo.png" id="7"]
[ext_resource type="Texture2D" uid="uid://c5r863sb51knl" path="res://textures/skyguy/balloon1.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b8xijoaerf2n" path="res://textures/skyguy/balloon3.png" id="9"]
[ext_resource type="Texture2D" uid="uid://n7ecmiglepdp" path="res://textures/skyguy/balloon5.png" id="10"]
[ext_resource type="Texture2D" uid="uid://ilcc0nh7slua" path="res://textures/skyguy/balloon4.png" id="11"]
[ext_resource type="Texture2D" uid="uid://j1kesg7rn8cc" path="res://textures/skyguy/balloon6.png" id="12"]
[ext_resource type="Script" path="res://scripts/battle/Balloons.gd" id="13"]
[ext_resource type="Texture2D" uid="uid://brkylv5e1m6x" path="res://sprites/UI/exclamation.png" id="14"]
[ext_resource type="PackedScene" uid="uid://ddxb2t13bohu" path="res://scenes/Circles.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://1axryjolfwxg" path="res://scenes/battle/FeedbackParticle.tscn" id="16"]
[ext_resource type="Texture2D" path="res://sprites/other/exp_animated.tres" id="17"]
[ext_resource type="Script" path="res://scripts/battle/HurtParticles.gd" id="18"]
[ext_resource type="Texture2D" uid="uid://bwsehqencn05g" path="res://sprites/UI/itemacbk.png" id="19"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"float",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}],
"loop": false,
"name": &"pop",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("5")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("5")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("5")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("5")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("2")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Curve" id="7"]
_data = [Vector2(0, 0.753409), 0.0, 0.0, 0, 0, Vector2(0.515957, 0.944318), 0.0, 0.0, 0, 0, Vector2(1, 0.298864), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="8"]
curve = SubResource("7")

[sub_resource type="ParticleProcessMaterial" id="9"]
direction = Vector3(0, 1, 0)
spread = 102.47
gravity = Vector3(0, -1, 0)
initial_velocity_min = 0.3
initial_velocity_max = 0.4
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("8")
color = Color(1, 1, 1, 0.462745)

[sub_resource type="StandardMaterial3D" id="10"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("17")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="11"]
material = SubResource("10")

[sub_resource type="Gradient" id="Gradient_hasmj"]
colors = PackedColorArray(1, 1, 1, 0.431373, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_htxy8"]
gradient = SubResource("Gradient_hasmj")

[sub_resource type="Curve" id="14"]
_data = [Vector2(0, 0.0875), 0.0, 0.0, 0, 0, Vector2(0.989474, 0.989474), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="15"]
curve = SubResource("14")

[sub_resource type="ParticleProcessMaterial" id="20"]
direction = Vector3(0, 1, 0.1)
spread = 144.87
flatness = 1.0
gravity = Vector3(0, 0, 0)
angle_min = -5.0
angle_max = 5.0
scale_min = 2.25
scale_max = 2.25
scale_curve = SubResource("15")
color_ramp = SubResource("GradientTexture1D_htxy8")

[sub_resource type="StandardMaterial3D" id="21"]
render_priority = 1
transparency = 1
no_depth_test = true
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("19")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="22"]
material = SubResource("21")
size = Vector2(0.25, 0.25)

[sub_resource type="SphereShape3D" id="23"]
radius = 0.05

[sub_resource type="SphereShape3D" id="24"]
radius = 0.08

[sub_resource type="SphereShape3D" id="25"]
radius = 0.162876

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lokhw"]
radius = 0.0395126
height = 0.307789

[node name="Enemy_Battle" type="CharacterBody3D"]
collision_layer = 32
collision_mask = 48
script = ExtResource("3")
stats = ExtResource("1")

[node name="Sprite2D" parent="." instance=ExtResource("4")]

[node name="Balloons" type="Marker3D" parent="Sprite2D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0354983, 0)
visible = false
script = ExtResource("13")

[node name="Balloons" type="AnimatedSprite3D" parent="Sprite2D/Balloons"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000103414, 0.400397, -0.0269557)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("1")
animation = &"float"
frame = 1

[node name="Pointer" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.429944, 0)
visible = false
texture_filter = 0
sprite_frames = SubResource("6")
autoplay = "default"
frame_progress = 0.2979

[node name="Exclamation" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00430261, 0.41311, 0.0609488)
visible = false
texture_filter = 0
texture = ExtResource("14")

[node name="Circles" parent="." instance=ExtResource("15")]

[node name="ExperienceParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0738787, 0)
emitting = false
amount = 16
lifetime = 0.5
process_material = SubResource("9")
draw_pass_1 = SubResource("11")

[node name="HurtParticles" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0951866, -0.115616)

[node name="HurtParticles2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.176069, 0.00502615)
script = ExtResource("18")

[node name="Timer" type="Timer" parent="HurtParticles2"]
wait_time = 0.05

[node name="Particles" type="GPUParticles3D" parent="HurtParticles2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0859575, 0.133776, 0)
emitting = false
amount = 16
lifetime = 1.6
speed_scale = 3.0
visibility_aabb = AABB(-1, -1, -1, 2, 2, 2)
process_material = SubResource("20")
draw_pass_1 = SubResource("22")

[node name="FeedbackParticle" parent="." instance=ExtResource("16")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0882893, 0.0474239, 0)

[node name="SlingshotAmmo" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125341, 0.230981, 0.0563395)
visible = false
collision_layer = 96
collision_mask = 96

[node name="Sprite3D" type="Sprite3D" parent="SlingshotAmmo"]
texture = ExtResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SlingshotAmmo"]
shape = SubResource("23")

[node name="SlingshotArea" type="Area3D" parent="SlingshotAmmo"]
collision_layer = 48
collision_mask = 48

[node name="CollisionShape" type="CollisionShape3D" parent="SlingshotAmmo/SlingshotArea"]
shape = SubResource("24")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999701, 0.0244322, 0, -0.0244322, 0.999701, 0.337, 0.444, 2.02)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0357761, 0)
collision_layer = 2147483680
collision_mask = 16

[node name="CollisionShape" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.174724, 0)
shape = SubResource("25")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16376, 0)
shape = SubResource("CapsuleShape3D_lokhw")

[connection signal="area_entered" from="SlingshotAmmo/SlingshotArea" to="." method="_on_SlingshotArea_area_entered"]
[connection signal="body_entered" from="SlingshotAmmo/SlingshotArea" to="." method="_on_slingshot_area_body_entered"]
[connection signal="area_entered" from="Area3D" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
